# mahavishnu

./: .betterleaks.toml  .checkpoint.json  .coverage  .coverage.les-pro.pid83391.XMenYQ9x.HQrCd4zWf7Dh  .coverage.les-pro.pid83392.XO0CIY7x.HD1IKfB1wEph  .coverage.les-pro.pid83394.XXCseVRx.Hh0JXh4Tui8h  .coverage.les-pro.pid83395.Xyyf2Oox.HaaJ8PakSeNh  .creosote.toml  .env.production.example  .gitignore  .lycheecache  .lycheeignore  .mcp.json  .pyscn.toml  2880  4  AGENTS.md  AI_MAESTRO_FEATURE_ANALYSIS.md  AI_TECHNIQUES_IMPLEMENTATION_PLAN.md  ARCHITECTURE.md  CHANGELOG.md  CHECKPOINT_2026-01-30.md  CHECKPOINT_20260203.md  CLAUDE.md  CODE_QUALITY_PLAN.md  CODE_QUALITY_REPORT.md  COMMITTEE_REVIEW_STATUS.md  CONDITIONS_STATUS.md  CROSS_REPO_COORDINATION_COMPLETE.md  CROSS_REPO_COORDINATION_SUMMARY.md  CROSS_REPO_METRICS_SUMMARY.md  DEPLOYMENT_GUIDE.md  DISASTER_RECOVERY_RUNBOOK.md  DOCUMENTATION_CORRECTIONS.md  DOCUMENTATION_UPDATES_JAN_2025.md  DOCUMENTATION_UPDATE_SUMMARY.md  ECOSYSTEM_REMEDIATION_STATUS.md  ECOSYSTEM_STATUS_FINAL.md  ECOSYSTEM_YAML_MIGRATION_COMPLETE.md  FINAL_EXECUTION_REPORT.md  (+103 more)
.audit_output/: bandit_report.json
.claude/: .gitignore  CLAUDE.md  CLAUDE.md.backup  CLAUDE.md.backup.json  settings.json  settings.local.json
.claude-plugin/: plugin.json
.claude-skills/: session-archaeologist
.codex/: config.toml
.oneiric_cache/: runtime_health.json  runtime_telemetry.json  workflow_checkpoints.sqlite
.playwright-mcp/: page-2026-07-16T00-11-59-678Z.yml  page-2026-07-16T00-45-09-951Z.yml  page-2026-07-16T00-46-45-314Z.yml  page-2026-07-16T00-58-52-998Z.yml
.qwen/: settings.json
commands/: mahavishnu-status.md
config/: mahavishnu.service  mahavishnu.supervisord.conf  otel-collector-config.yaml
cron/: jobs.json  jobs.template.json
data/: learning.db
docs/: ACCESSIBILITY_CHECKLIST.md  ACCESSIBILITY_CHECKLIST.md.backup.json  ADMIN_SHELL.md  ADMIN_SHELL.md.backup.json  AGENTDB_INVESTIGATION_REPORT.md  AGNO_ADAPTER_IMPLEMENTATION_PLAN.md  AI_ENVIRONMENT_MANAGEMENT.md  AI_ENVIRONMENT_QUICKSTART.md  AI_ENVIRONMENT_SUMMARY.md  AUTO_RESTART_GUIDE.md  CLAUDE_QWEN_AUTH_INTEGRATION.md  CLI_REFERENCE.md  CODE_INDEXING.md  CONFIGURATION.md  CONFIGURATION_OPTIMIZATION.md  CONTENT_INGESTION_GUIDE.md  CONTENT_QUALITY_EVALUATION.md  CRITICAL_REVIEW_2026.md  CROSS_REPO_COORDINATION_PLAN.md  CROSS_REPO_METRICS_PROPOSAL.md  DATA_INGESTION.md  DEAD_LETTER_QUEUE.md  DEAD_LETTER_QUEUE_CLI_GUIDE.md  DHARA_WIRING.md  DISASTER_RECOVERY_RUNBOOK.md  DOCUMENTATION_UPDATE_ADMIN_SHELL.md  DOCUMENTATION_UPDATE_ADMIN_SHELL.md.backup.json  DRUVA_WIRING.md  ECOSYSTEM.md  EMBEDDINGS_SETUP_GUIDE.md  FEATURE_ROADMAP_NEXT_STEPS.md  FILE_REFERENCE.md  FINAL_GAP_ANALYSIS.md  GETTING_STARTED.md  GETTING_STARTED.md.backup  GETTING_STARTED.md.backup.json  GOAL_DRIVEN_TEAMS.md  GOAL_DRIVEN_TEAMS.md.backup  GOAL_DRIVEN_TEAMS.md.backup.json  GRACEFUL_FALLBACK_IMPLEMENTATION.md  (+115 more)
examples/: book_ingestion_example.py  cli_ingestion_examples.sh  goal_driven_team_tutorial.py  native_otel_example.py  oneiric_workflow_examples.py  otel_ingester_example.py  otel_pgvector_test.py  otel_storage_example.py  pool_monitoring_demo.py  pydantic_ai_adapter_example.py  pydantic_ai_agent.py  quick_test_otel.py  quick_test_with_path.py  quickstart_oneiric.py  routing_monitoring_example.py  sample_claude_traces.json  sample_qwen_traces.json  test_hotstore_direct.py  test_mcp_otel_tools.py  web_ingestion_example.py  websocket_client_examples.py  websocket_integration.py  workflow_monitoring_demo.py  workflow_oneiric_examples.yaml
ingested/: Test Blog Post.md
mahavishnu/: .gitignore  USER.md  __init__.py  __main__.py  _main_cli.py  backup_cli.py  cli.py  cli.py.bak2  coordination_cli.py  ecosystem_cli.py  factories.py  health.py  ingestion_cli.py  metrics_cli.py  metrics_cli.py.backup  metrics_cli.py.backup.json  monitoring_cli.py  production_cli.py  quality_cli.py  repo_cli.py  routing_cli.py  routing_cli.py.bak  style-sop.md  sync_cli.py  task_cli.py  worktree_cli.py
mcp-common/: README.md  pyproject.toml
mcp-common/mcp_common/: __init__.py
mcp-common/mcp_common/code_graph/: __init__.py  analyzer.py
mcp-common/mcp_common/mcp/: __init__.py
mcp-common/mcp_common/mcp/contracts/: code_graph_tools.yaml
mcp-common/mcp_common/messaging/: __init__.py  types.py
mcp-common/mcp_common/tests/: test_code_graph.py
memory/: HISTORY.md  MEMORY.md  history.jsonl
messaging/: __init__.py  types.py
migrations/: 001_create_users_table.sql  add_patterns.sql  env.py  init.sql
monitoring/: MONITORING_GUIDE.md  QUICKSTART.md  RESILIENCE_EXAMPLES.md  RESILIENCE_INTEGRATION.md  alerts.py  backup_system.py  docker-compose.yml  ecosystem_metrics_inventory.yml  example_integration.py  metrics.py  otel.py  prometheus.yml  resilience.py  security_audit_report.json
plugins/: check_ecosystem_gitignores.json
scripts/: _orphan_sweep_C1_2.py  add_proactive_triggers.py  add_test_embeddings.py  agent_metadata_audit.py  agent_metrics_system.py  agent_versioning.py  analyze_session_transcripts.py  archive_docs.py  audit_ecosystem_docs.py  audit_orphans.py  audit_workflow_lifecycle.py  auto-git-setup-complete.sh  auto-setup-git-mcp.sh  auto-start-mcp-servers.sh  auto_agent_metrics.py  batch_parse_metrics.sh  batch_version_init.py  bifrost-ctl  bifrost-gateway.py  bifrost-gateway.zsh  bifrost-toggle-claude-url  build.sh  check-event-schemas.py  check_ecosystem_gitignores.py  check_websocket_health.py  cleanup_reflection_db.py  collect_metrics.py  debug_statusline_input.py  deploy_production.sh  deploy_websocket_servers.sh  discover_agent.py  duckdb_grafana_server.py  e2e_rag_benchmark.py  ecosystem_health_check.sh  embedding_throughput_benchmark.py  eval-content-quality.py  find_untested_modules.py  fix_code_quality.py  fix_plugin_manifests.py  fix_remaining_prints.py  (+49 more)
settings/: README.md  ecosystem.yaml  ecosystem.yaml.bak  embeddings.yaml  local.yaml.example  mahavishnu.yaml  mahavishnu.yaml.example  models.yaml
tests/: __init__.py  conftest.py  test_audit_workflow_lifecycle.py  test_content_ingestion.py  (+1 more)
(+2233 files in other folders)
