[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mahavishnu"]

[project]
name = "mahavishnu"
version = "0.7.1"
description = "Global orchestrator package for development workflows"
authors = [
    {name = "Les Leslie", email = "les@wedgwoodwebworks.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13, <3.15"
classifiers = [
    "Development Status :: 4 - Beta",
]
dependencies = [
    # CLI
    "typer>=0.20.1",
    # Oneiric ecosystem
    "oneiric>=0.3.12",
    # Shared infrastructure (mcp-common)
    "mcp-common[treesitter,llm]>=0.14.1",
    # MCP server
    "fastmcp>=3.0.0b1",
    "uvicorn[standard]>=0.38.0",
    # Configuration
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "tomli>=2.2.1",
    "aiofiles>=25.1.0",
    # XDG Base Directory compliance
    "platformdirs>=4.0.0",
    # Observability
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-instrumentation>=0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    # Prometheus metrics
    "prometheus-client>=0.21.0",
    "structlog>=25.5.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # OpenTelemetry trace storage
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    # Embeddings: Use Ollama (local) or OpenAI API instead.
    # See: mahavishnu/core/embeddings.py for the OllamaProvider and OpenAIProvider.
    # Resilience
    "tenacity>=9.1.2",
    "starlette-context>=0.4.0",
    # Prefect: High-level orchestration
    "prefect>=3.6.13",
    "croniter>=3.0.4",
    # Agno: Fast, scalable single/multi-agents
    "agno>=0.1.7",
    # LlamaIndex: RAG pipelines
    "llama-index-core>=0.14.0,<0.15.0",
    "llama-index-embeddings-ollama>=0.8.0,<0.9.0",
    "llama-index-llms-ollama>=0.8.0,<0.9.0",
    "llama-index-vector-stores-opensearch>=0.6.0,<0.7.0",
    # Content ingestion
    "pypdf>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx[http2]>=0.28.0",
    "ebooklib>=0.18",
    # AI integrations
    "pydantic-ai-slim[mcp,openai,anthropic,google,groq]>=1.77.0",
    "llama-cpp-python>=0.3.20",
    # Serverless GPU
    "runpod-flash~=1.7",
    # Security
    "defusedxml>=0.7.1",
    "ty>=0.0.40",
    # Git operations
    "gitpython>=3.1.46",
    # Async SQLite
    "aiosqlite>=0.20.0",
    # Encryption
    "cryptography>=44.0.0",
    # Admin shell
    "ipython>=8.0.0",
]

[project.scripts]
mahavishnu = "mahavishnu._main_cli:app"

[project.entry-points."mahavishnu.adapters"]
prefect = "mahavishnu.engines.prefect_adapter:prefect_adapter_entries"
agno = "mahavishnu.engines.agno_adapter:agno_adapter_entries"
worker = "mahavishnu.core.adapters.worker:worker_adapter_entries"

[dependency-groups]
# Core development and testing
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-mock>=3.15.1",
    "hypothesis>=6.148.13",
    "pytest-timeout>=2.4.0",
    "respx>=0.22.0",
    "ruff>=0.14.14",
    "pyright>=1.1.408",
    "pylint>=3.0.4",
    "bandit>=1.9.3",
    "safety>=2.3.4",
    "creosote>=4.1.0",
    "detect-secrets>=1.4.0",
    "refurb>=2.2.0",
    "codespell>=2.4.1",
    "complexipy>=5.1.0",
    "zensical>=0.0.19",
]

# Bodai ecosystem integrations
ecosystem = [
    "akosha>=0.2.0",
    "crackerjack>=0.50.1",
    "dhara>=0.7.0",
    "session-buddy>=0.13.0",
]

# Optional: iTerm2 terminal integration (macOS only)
iterm2 = [
    "iterm2>=2.13",
]

# Optional: TUI interface
tui = [
    "textual>=0.40",
]

# Optional: Embedding compression
compression = [
    "turboquant-pro>=0.1.0",
]

# Optional: Hatchet workflow orchestration
hatchet = [
    "hatchet-sdk>=1.0,<2",
]

# Desktop automation
# Note: pyatomac removed — fails to build on newer macOS SDKs (missing conversion.h).
# pyautogui provides cross-platform mouse/keyboard/screenshot automation.
automation = [
    "pyautogui>=0.9.54",
    "Pillow>=12.2.0",
    "mss>=9.0.0",
]

# Desktop automation with vision (OCR, image recognition)
# Note: easyocr removed — it forces torch (2GB) which lacks macOS ARM64 wheels.
# Use pytesseract + opencv-python instead. Install tesseract: brew install tesseract
automation-vision = [
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "TCH",
]
ignore = [
    "B904",
    "N806",
    "E402",
    "SIM102",
    "SIM105",
    "SIM108",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["mahavishnu"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"mahavishnu/**/*cli*.py" = ["B008"]
"mahavishnu/cli/**/*.py" = ["B008"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 6
max-statements = 55

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_uncomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=mahavishnu",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-n", "auto",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, may use external services)",
    "e2e: End-to-end tests (slowest, full workflow)",
    "property: Property-based tests using Hypothesis",
    "slow: Mark test as slow (skip with -m 'not slow')",
    "timeout: Mark test with custom timeout duration",
    "ci: Tests that must pass in CI",
    "crackerjack: Tests that run in Crackerjack QC",
    "prefect: Tests for Prefect adapter",
    "llamaindex: Tests for LlamaIndex adapter",
    "agno: Tests for Agno adapter",
    "hatchet: Tests for Hatchet adapter",
    "mcp: Tests for MCP server functionality",
    "chaos: Chaos and failure-injection tests",
    "requires_network: Tests requiring network access",
    "requires_auth: Tests requiring authentication credentials",
]
timeout = "300"
timeout_method = "thread"

[tool.coverage.run]
source = ["mahavishnu"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", "test_*.py"]
skips = ["B101"]

[tool.pyright]
include = ["mahavishnu"]
exclude = ["**/test*", "**/__pycache__"]
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pylint.messages_control]
disable = [
    "C0111",
    "C0103",
    "R0903",
]

[tool.pylint.format]
max-line-length = 100

[tool.creosote]
paths = ["mahavishnu"]
sections = ["project.dependencies", "dependency-groups"]
exclude_deps = [
    "prometheus-client",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation",
    "opentelemetry-exporter-otlp-proto-grpc",
    "uvicorn",
    "slowapi",
    "starlette-context",
    "pgvector",
    "tomli",
    "defusedxml",
    "croniter",
    "beautifulsoup4",
    "gitpython",
    "opencv-python",
    "Pillow",
    "mss",
    "pyatomac",
    "pyxa",
    "pyautogui",
    "pytesseract",
    "easyocr",
    "pypdf",
    "ebooklib",
    "turboquant-pro",
    "llama-cpp-python",
    "hatchet-sdk",
    "runpod-flash",
    "agno",
    "bandit",
    "complexipy",
    "codespell",
    "crackerjack",
    "creosote",
    "detect-secrets",
    "hypothesis",
    "pylint",
    "pyright",
    "refurb",
    "ruff",
    "safety",
    "zensical",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "pytest-xdist",
    "respx",
]

[tool.refurb]
enable_all = false
ignore = [
    "FURB101",
    "FURB102",
    "FURB103",
    "FURB105",
    "FURB107",
    "FURB108",
    "FURB109",
    "FURB110",
    "FURB111",
    "FURB113",
    "FURB115",
    "FURB117",
    "FURB118",
    "FURB119",
    "FURB123",
    "FURB124",
    "FURB126",
    "FURB135",
    "FURB138",
    "FURB140",
    "FURB141",
    "FURB142",
    "FURB143",
    "FURB145",
    "FURB148",
    "FURB154",
    "FURB157",
    "FURB160",
    "FURB165",
    "FURB173",
    "FURB183",
    "FURB184",
]

[tool.pip-audit]
ignore-vuln = [
    "CVE-2025-69872",
    "PYSEC-2024-277",
    "PYSEC-2026-89",
    "PYSEC-2026-97",
    "PYSEC-2025-144",
    "PYSEC-2025-145",
    "PYSEC-2025-146",
    "PYSEC-2025-147",
    "PYSEC-2026-101",
    "PYSEC-2026-102",
    "PYSEC-2025-183",
    "PYSEC-2025-211",
    "PYSEC-2025-212",
    "PYSEC-2025-213",
    "PYSEC-2025-214",
    "PYSEC-2025-215",
    "PYSEC-2025-216",
    "PYSEC-2025-217",
    "PYSEC-2025-218",
]

[tool.codespell]
ignore-words-list = ["assertIn", "import", "ttest", "ned"]
skip = '.git,*.egg-info,*cache,.venv,build,dist,htmlcov'

[tool.complexipy]
max_complexity = 15
ignore = ["tests"]

[tool.zensical]
site_name = "Mahavishnu Documentation"
source_dir = "docs/src"
output_dir = "docs/dist"
theme = "default"
markdown_extensions = [
    "extra",
    "codehilite",
    "toc(permalink=true)",
]
plugins = [
    "search",
]
nav = [
    "index.md",
    "installation.md",
    "configuration.md",
    "usage.md",
    "adapters/index.md",
    "adapters/langgraph.md",
    "adapters/prefect.md",
    "adapters/agno.md",
    "mcp-server.md",
    "security.md",
    "production.md",
    "api-reference.md",
    "troubleshooting.md",
]

[tool.uv.sources]
session-buddy = { path = "../session-buddy", editable = true }