[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-common"
version = "0.4.0"
description = "Shared infrastructure for Session Buddy and Mahavishnu"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.hatch.metadata]
allow-direct-references = true

# Ruff Configuration
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "I",   # Import sorting
    "N",   # PEP8 naming
    "UP",  # Pyupgrade
    "B",   # Bugbear
    "C4",  # Comprehensions
    "SIM", # Simplify
    "TCH", # Type checking
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["mcp_common"]
force-sort-within-sections = true

[tool.pytest]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["mcp_common/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
